--- a/src/data/bio/en.mdx
+++ b/src/data/bio/en.mdx
@@ -1,6 +1,6 @@
 > Hello there! I’m Gilhan Park, currently a master's student in Artificial Intelligence at Sungkyunkwan University in South Korea. I am a member of [**Visual Computing LABoratory**](https://sites.google.com/site/vclabskku/) advised by [**Prof. Jae-Pil Heo**](https://sites.google.com/site/jaepilheo).
 >
-> My research topic is centered on **Computer Vision**, specifically **Continual Learning, Class-Incremental Segmentation**, and **Vision-Language Models (VLMs)**.
+> My research topic is centered on **Computer Vision**, specifically **Continual Learning, Class-Incremental Segmentation**, and **Parameter Efficient Fine-Tuning**.
 >
 > If you're interested in my research or would like to engage in a scholarly discussion, please contact me via email.
 
@@ -11,4 +11,4 @@
 - Continual Learning
 - Class-Incremental Learning
 - Segmentation
-- VLMs(Vision-Language Model)
+- Parameter Efficient Fine-Tuning
