--- a/src/data/bio/ko.mdx
+++ b/src/data/bio/ko.mdx
@@ -1,6 +1,6 @@
 > 안녕하세요! 저는 현재 성균관대학교 인공지능 석사 과정에 재학 중인 박길한입니다. 저는 [**Visual Computing LABoratory**](https://sites.google.com/site/vclabskku/) 소속으로 [**허재필 교수님**](https://sites.google.com/site/jaepilheo)께서 지도하고 계십니다.  
 >
-> 제 연구 주제는 컴퓨터 비전에 중점을 두고 있으며, 특히 **Continual Learning, Class-Incremental Segmentation** 및 **Vision-Language Models**에 관심을 가지고 있습니다.  
+> 제 연구 주제는 컴퓨터 비전에 중점을 두고 있으며, 특히 **Continual Learning, Class-Incremental Segmentation** 및 **Parameter Efficient Fine-Tuning**에 관심을 가지고 있습니다.  
 >
 > 제 연구에 관심이 있거나 학문적 토론을 원하시면, 이메일로 연락해 주시기 바랍니다.
 
@@ -8,4 +8,4 @@
 - Continual Learning
 - Class-Incremental Learning
 - Segmentation
-- VLMs(Vision-Language Model)
+- Parameter Efficient Fine-Tuning
